# backend/internal/web/docs/swagger.json
@@ -73,6 +73,209 @@
                 }
             }
         },
+        "/v1/feed-messages": {
+            "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "List all FeedMessages",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "FeedMessage"
+                ],
+                "summary": "List all FeedMessages",
+                "parameters": [
+                    {
+                        "enum": [
+                            "created_at"
+                        ],
+                        "type": "string",
+                        "description": "order by",
+                        "name": "orderBy",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "default": 0,
+                        "description": "The number of items to skip",
+                        "name": "skip",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "default": 100,
+                        "description": "The number of items to return",
+                        "name": "limit",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "A list of FeedMessages",
+                        "schema": {
+                            "$ref": "#/definitions/dtos.PaginationResponse-dtos_FeedMessage"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "Create a new FeedMessage",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "FeedMessage"
+                ],
+                "summary": "Create a new FeedMessage",
+                "parameters": [
+                    {
+                        "description": "The FeedMessage details",
+                        "name": "FeedMessage",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dtos.FeedMessageCreate"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/dtos.FeedMessage"
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/feed-messages/{id}": {
+            "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "Get a FeedMessage",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "FeedMessage"
+                ],
+                "summary": "Get a FeedMessage",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "The FeedMessage ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dtos.FeedMessage"
+                        }
+                    }
+                }
+            },
+            "put": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "Update a FeedMessage",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "FeedMessage"
+                ],
+                "summary": "Update a FeedMessage",
+                "parameters": [
+                    {
+                        "description": "The FeedMessage details",
+                        "name": "FeedMessage",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dtos.FeedMessageUpdate"
+                        }
+                    },
+                    {
+                        "type": "string",
+                        "description": "The FeedMessage ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dtos.FeedMessage"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "Delete a FeedMessage",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "FeedMessage"
+                ],
+                "summary": "Delete a FeedMessage",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "The FeedMessage ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "No Content"
+                    }
+                }
+            }
+        },
         "/v1/feeds": {
             "get": {
                 "security": [
@@ -356,6 +559,40 @@
                 },
                 "retention": {
                     "$ref": "#/definitions/dtos.Retention"
+                }
+            }
+        },
+        "dtos.FeedMessage": {
+            "type": "object",
+            "properties": {
+                "createdAt": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "updatedAt": {
+                    "type": "string"
+                }
+            }
+        },
+        "dtos.FeedMessageCreate": {
+            "type": "object"
+        },
+        "dtos.FeedMessageUpdate": {
+            "type": "object"
+        },
+        "dtos.PaginationResponse-dtos_FeedMessage": {
+            "type": "object",
+            "properties": {
+                "items": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/dtos.FeedMessage"
+                    }
+                },
+                "total": {
+                    "type": "integer"
                 }
             }
         },
